# services-factory

./: .bazelignore  .bazelrc  BAZEL.md  BUILD  CMakeLists.txt  MODULE.bazel  Makefile  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-services-factory  bazel-testlogs  build_bazel.sh  main.cpp
.devcontainer/: Dockerfile  INTEGRATION.md  README.md  build_container.sh  devcontainer.json  setup.sh  test.sh
framework/: BUILD  service_factory.cpp  service_factory.h  service_interface.h  service_manager.cpp  service_manager.h
framework/test/: test_framework.cpp
scripts/: build.sh  format.sh  run-devcontainer.sh
services/: BUILD
services/cache/: BUILD  cache.h
services/database/: BUILD  database.h
services/examples/: BUILD  example_services.h
services/file_monitor/: BUILD  file_monitor_service.h
services/logging/: BUILD  logging_service.h
services/network/: BUILD  network.h
services/rest_api/: BUILD  README.md  rest_api_demo.cpp  rest_api_registration.h  rest_api_service.cpp  rest_api_service.h  test_client.cpp
services/weather/: BUILD  main.cpp  weather_service.h
